# lac

./: .clang-format  .clang-tidy  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  code-of-conduct.md  copyright.md  maintainers.md  mit.license  readme.md
cmake/configure/: doxyfile.in  testpath.hpp.in
cmake/include/: configure.cmake  documentation.cmake  external.cmake  install.cmake  option.cmake  test-configure.cmake  test-dependency.cmake  test-external.cmake
cmake/module/: FindFilesystem.cmake
doc/web/: config.toml  deploy.sh
doc/web/content/: _index.md
doc/web/content/api/: _index.md
doc/web/content/api/is_float_field/: _index.md
doc/web/content/api/traits/: _index.md
doc/web/content/doc/float_field/: _index.md
doc/web/content/file/traits.hpp/: _index.md
doc/web/content/whats-new/: _index.md
doc/web/layouts/partials/: add-mathjax-to-page.html  toc.html
share/devtools/examples/: clang-tidy  gitignore  vimrc  ycm_extra_conf.py
src/include/lac/: cpu_execution_engine.hpp  execution_engine_fwd.hpp  execution_policy.hpp  static_vector.hpp  traits.hpp  vector.hpp  vector_operation.hpp  vector_operation_fwd.hpp
src/include/lac/detail/: make_array.hpp  traits.hpp
src/lib/: CMakeLists.txt
test/: CMakeLists.txt
test/include/testlac/: jvector.hpp
test/include/testlac/tools/: wsv.hpp
test/include/teststd/experimental/math/: traits.hpp
test/lib/: CMakeLists.txt
test/lib/tools/: CMakeLists.txt  wsv.cpp  wsv.t.cpp
test/lib/unit/: CMakeLists.txt  jvector.t.cpp  static_vector.t.cpp  traits.cpp  traits.t.cpp  vector.t.cpp  vector_view.t.cpp
utils/citools/linux/: ci  complete_local_ci  local_ci
utils/devtools/linux/: changelog  clang-tidy  format.sh
(+20 files in other folders)
